--- a/package.json
+++ b/package.json
@@ -20,6 +20,13 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "bootstrap-datepicker": "^1.8.0",
+        "bootstrap-notify": "^3.1.3",
+        "icheck": "^1.0.2",
+        "select2": "^4.0.7"
     }
 }
