--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,10 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
+		"new-install": [
+            "composer run post-root-package-install",
+			"composer run post-create-project-cmd"
+        ],
 		"build": [
 		    "composer dump-autoload",
             "php artisan clear-compiled",
