--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "bootstrap-datepicker": "^1.8.0",
         "bootstrap-notify": "^3.1.3",
         "icheck": "^1.0.2",
+        "lightbox2": "^2.11.0",
         "select2": "^4.0.7"
     }
 }
